<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="1.0dip"
        android:layout_marginRight="1.0dip"
        android:layout_marginTop="10.0dip"
        android:text="@string/app_name_version"
        android:textColor="@color/setting_text1"
        android:textSize="15dip"
        tools:context=".HelpActivity" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:layout_marginBottom="10.0dip"
        android:layout_marginLeft="1.0dip"
        android:layout_marginRight="1.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/setting_line" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="1.0dip"
                android:layout_marginRight="1.0dip"
                android:autoLink="web|email|phone"
                android:text="@string/shutter_sound"
                android:textColor="@color/title_bg"
                tools:context=".HelpActivity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1.0dip"
                android:layout_marginRight="1.0dip"
                android:text="@string/shutter_sound_tip" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:layout_marginBottom="10.0dip"
                android:layout_marginLeft="1.0dip"
                android:layout_marginRight="1.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/setting_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1.0dip"
                android:layout_marginRight="1.0dip"
                android:text="@string/shutter_shift"
                android:textColor="@color/title_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1.0dip"
                android:layout_marginRight="1.0dip"
                android:text="@string/shutter_shift_tip" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:layout_marginBottom="10.0dip"
                android:layout_marginLeft="1.0dip"
                android:layout_marginRight="1.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/setting_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="1.0dip"
                android:layout_marginRight="1.0dip"
                android:autoLink="web|email|phone"
                android:text="@string/appwidget"
                android:textColor="@color/title_bg"
                tools:context=".HelpActivity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1.0dip"
                android:layout_marginRight="1.0dip"
                android:autoLink="web"
                android:text="@string/appwidget_tip" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:layout_marginBottom="10.0dip"
                android:layout_marginLeft="1.0dip"
                android:layout_marginRight="1.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/setting_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="1.0dip"
                android:layout_marginRight="1.0dip"
                android:autoLink="web|email|phone"
                android:text="@string/notice"
                android:textColor="@color/title_bg"
                tools:context=".HelpActivity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1.0dip"
                android:layout_marginRight="1.0dip"
                android:text="@string/notice_tip" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:layout_marginBottom="10.0dip"
                android:layout_marginLeft="1.0dip"
                android:layout_marginRight="1.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/setting_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="1.0dip"
                android:layout_marginRight="1.0dip"
                android:autoLink="web|email|phone"
                android:text="@string/author"
                android:textColor="@color/title_bg"
                tools:context=".HelpActivity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1.0dip"
                android:layout_marginRight="1.0dip"
                android:autoLink="web|email"
                android:text="@string/author_tip" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>